--- a/src/imageserver/templates/publish.html
+++ b/src/imageserver/templates/publish.html
@@ -41,7 +41,7 @@
 			external_image_url: '{{ external_url_for('image') }}',
 			external_static_url: '{{ external_url_for('static', filename='') }}',
 			help_url: '{{ url_for('image_help', embed=1) }}',
-			template_api_url: '{{ url_for('api.admin.template', template_id=0) }}',
+			template_api_url: '{{ url_for('api.admin-template', template_id=0) }}',
 			warn_icon_url: '{{ url_for('static', filename='images/icon-warning.png') }}'
 		};
 
