--- a/src/imageserver/admin/templates/admin_template_list.html
+++ b/src/imageserver/admin/templates/admin_template_list.html
@@ -54,7 +54,7 @@
 			<td>
 				{% if is_permitted(SystemPermission.PERMIT_SUPER_USER) %}
 				{% if template.name|lower != system_template_value|lower %}
-				<form id="delform_{{ template.id }}" class="delform" action="{{ url_for('api.admin.template', template_id=template.id) }}" _method="delete">
+				<form id="delform_{{ template.id }}" class="delform" action="{{ url_for('api.admin-template', template_id=template.id) }}" _method="delete">
 					<input type="hidden" name="del_name" value="{{ template.name }}" />
 					(<a class="action" href="#" onclick="return submitParentForm(this)">delete</a>)
 				</form>
@@ -72,7 +72,7 @@
 		values will be taken from this template:<br>
 
 		{% if is_permitted(SystemPermission.PERMIT_SUPER_USER) %}
-			<form id="deftemplform" action="{{ url_for('api.admin.property', property_id=system_template_key) }}" _method="put">
+			<form id="deftemplform" action="{{ url_for('api.admin-property', property_id=system_template_key) }}" _method="put">
 				<fieldset class="inline_form">
 					<select name="value" autocomplete="off">
 					{% for template in templates %}
