Pillow - finalise names of app editions

--- a/src/imageserver/templates/about.html
+++ b/src/imageserver/templates/about.html
@@ -53,7 +53,7 @@
 		</tr>
 		<tr>
 			<td>Edition</td>
-			<td>{{ app_edition() }} {% if app_edition()=='Free' %}(<a class="action" href="{{ about.__uri__ }}">upgrade information</a>){% endif %}</td>
+			<td>{{ app_edition() }} {% if app_edition()=='Standard' %}(<a class="action" href="{{ about.__uri__ }}">upgrade information</a>){% endif %}</td>
 		</tr>
 		<tr>
 			<td>Debug mode</td>
