--- a/src/imageserver/templates/inc_license_text.html
+++ b/src/imageserver/templates/inc_license_text.html
@@ -1,4 +1,4 @@
-{% if app_edition() == 'Free' %}
+{% if app_edition() == 'Standard' %}
 Licensed under the <a href="http://www.gnu.org/licenses/agpl-3.0.txt">GNU Affero GPL</a>,
 source code available <a href="{{ about.__source_uri__ }}">on GitHub</a>.
 {% else %}
