--- a/src/imageserver/templates/publish/input_ChoiceValidator.html
+++ b/src/imageserver/templates/publish/input_ChoiceValidator.html
@@ -1,4 +1,5 @@
-<select name="{{ web_name }}" id="publish_field_{{ key }}" class="publish_field" autocomplete="off">
+<select name="{{ web_name }}" id="publish_field_{{ key }}" class="publish_field"
+        autocomplete="off" {% if not enabled %}disabled="disabled"{% endif %}>
 {% if validator.choices|join == 'hv' %}
 	<option value=""   {% if not default %}selected{% endif %}>None</option>
 	<option value="h"  {% if default == 'h' %}selected{% endif %}>Horizontal</option>
