--- a/src/imageserver/templates/publish/input_ICCProfileValidator.html
+++ b/src/imageserver/templates/publish/input_ICCProfileValidator.html
@@ -1,4 +1,5 @@
-<select name="{{ web_name }}" id="publish_field_{{ key }}" class="publish_field" autocomplete="off">
+<select name="{{ web_name }}" id="publish_field_{{ key }}" class="publish_field"
+        autocomplete="off" {% if not enabled %}disabled="disabled"{% endif %}>
 	<option value="" {% if not default %}selected{% endif %}></option>
 	{% set icc_dict = validator.icc_choices() %}
 	{% for cspace in icc_dict %}
