--- a/src/imageserver/templates/publish/input_RangeValidator.html
+++ b/src/imageserver/templates/publish/input_RangeValidator.html
@@ -1,4 +1,5 @@
 <input type="number" name="{{ web_name }}" id="publish_field_{{ key }}" class="publish_field"
        min="{{ validator.min }}" max="{{ validator.max }}"
        {% if validator.max > 999999 %}style="width: 7em;"{% endif %}
-       value="{{ default }}" placeholder="{{ placeholder }}" autocomplete="off">
+       value="{{ default }}" placeholder="{{ placeholder }}"
+       autocomplete="off" {% if not enabled %}disabled="disabled"{% endif %}>
