--- a/src/imageserver/templates/publish/input_default.html
+++ b/src/imageserver/templates/publish/input_default.html
@@ -1,2 +1,3 @@
 <input type="text" name="{{ web_name }}" id="publish_field_{{ key }}" class="publish_field"
-       value="{{ default }}" placeholder="{{ placeholder }}" autocomplete="off">
+       value="{{ default }}" placeholder="{{ placeholder }}"
+       autocomplete="off" {% if not enabled %}disabled="disabled"{% endif %}>
