--- a/src/imageserver/templates/publish/input_overlay_size.html
+++ b/src/imageserver/templates/publish/input_overlay_size.html
@@ -1,4 +1,5 @@
-<select name="{{ web_name }}_choices" id="publish_field_{{ key }}_choices" autocomplete="off">
+<select name="{{ web_name }}_choices" id="publish_field_{{ key }}_choices"
+        autocomplete="off" {% if not enabled %}disabled="disabled"{% endif %}>
 	<option value=""    {% if not default %}selected{% endif %}></option>
 	<option value="0.1" {% if default == 0.1 %}selected{% endif %}>10%</option>
 	<option value="0.2" {% if default == 0.2 %}selected{% endif %}>20%</option>
