--- a/src/imageserver/templates/publish/input_template.html
+++ b/src/imageserver/templates/publish/input_template.html
@@ -1,4 +1,5 @@
-<select name="{{ web_name }}" id="publish_field_{{ key }}" class="publish_field" autocomplete="off">
+<select name="{{ web_name }}" id="publish_field_{{ key }}" class="publish_field"
+        autocomplete="off" {% if not enabled %}disabled="disabled"{% endif %}>
 	<option value="" {% if not default %}selected{% endif %}></option>
 	{% for t in template_list %}
 		{% if t.id == default or t.name == default %}
